--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+html, body {
+	font-size: 16px;
+}
+
+body {
+    padding: 15px;
+}
