--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,4 @@
-.gender-selector-wrp, .weather-condition-wrp {
+.gender-selector-wrp, .weather-condition-wrp, .stations-list {
     margin-bottom: 30px;
 }
 
@@ -12,4 +12,8 @@
         margin-right: 15px;
         font-size: 1.4rem;
     }
+}
+
+.load-more-wrp {
+    text-align: center;
 }
