--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,14 +8,28 @@
         align-items: center;
     }
 
+    .list-group-item {
+        & > span {
+            flex: 1;
+        }
+
+        .forecast-wrp {
+            text-align: right;
+
+            svg {
+                float: right;
+            }
+        }
+    }
+
     .weather-icon {
         margin-right: 15px;
         font-size: 1.4rem;
     }
 
     .forecast-chart {
-        border: 1px solid red;
-        
+        display: none;
+
         .domain {
             display: none;
         }
@@ -25,3 +39,40 @@
 .load-more-wrp {
     text-align: center;
 }
+
+
+.lds-ripple {
+    display: inline-block;
+    position: relative;
+    width: 64px;
+    height: 64px;
+}
+
+.lds-ripple div {
+    position: absolute;
+    border: 4px solid #444;
+    opacity: 1;
+    border-radius: 50%;
+    animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+
+.lds-ripple div:nth-child(2) {
+    animation-delay: -0.5s;
+}
+
+@keyframes lds-ripple {
+    0% {
+        top: 28px;
+        left: 28px;
+        width: 0;
+        height: 0;
+        opacity: 1;
+    }
+    100% {
+        top: -1px;
+        left: -1px;
+        width: 58px;
+        height: 58px;
+        opacity: 0;
+    }
+}  
