--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -82,7 +82,7 @@
 				<p>But don't worry, we found a good fit for you (with 1˚ C and 5% deviation), take a look:</p>
 			</div>
 
-			<p *ngIf="bestStation">Worth mentioning:</p>
+			<p *ngIf="bestStation">Worth mentioning (1˚ C and 5% deviation):</p>
 		</div><!-- col -->
 	</div><!-- row -->
 
