--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
 <div class="container">
+	<div class="row">
+		<div class="col">
+			<h1>{{ title }}</h1>
+		</div>
+	</div>
+
 	<div class="row gender-selector-wrp">
 		<div class="col">
 			<p>Select preferable gender:</p>
