--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -84,8 +84,8 @@
 			</ul>
 
 			<div *ngIf="!bestStation">
-				<p>Sorry, there is no place in the world with this strict weather conditions (means that no cities with exact {{ perfectWeatherConditions[gender].temperature }}˚ C / {{ perfectWeatherConditions[gender].humidity }}% were found).</p>
-				<p>But don't worry, we found a good fit for you (with 1˚ C and 5% deviation), take a look:</p>
+				<p>Sorry, there is no place in the world with this strict weather conditions (means that no cities with exact {{ perfectWeatherConditions[gender].temperature }}&deg;C / {{ perfectWeatherConditions[gender].humidity }}% were found).</p>
+				<p>But don't worry, we found a good fit for you (with {{ perfectWeatherConditions.appliedDeviationTemp }}&deg;C and {{ perfectWeatherConditions.appliedDeviationHumidity }}% deviation), take a look:</p>
 			</div>
 
 			<p *ngIf="bestStation">Worth mentioning (1˚ C and 5% deviation):</p>
